Updated thumbnail description and image

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta property=’og:title’ content='Mannix Kwan - Personal Website'/>
+    <meta property=’og:image’ content='https://mannix-kwan.herokuapp.com/assets/ProfilePicture.jpg'/>
+    <meta property=’og:description’ content='Hey! Check out more about Mannix Kwan - a technology enthusiast specialized in digital transformation'/>
+    <meta property=’og:url’ content='https://mannix-kwan.herokuapp.com/'/>
+    <meta property='og:image:width' content='390' />
+    <meta property='og:image:height' content='450' />
     <script src="https://kit.fontawesome.com/6b94719a70.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.js"
   integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
