Updating profile picture to be transparent

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta property=’og:title’ content='Mannix Kwan - Personal Website'/>
-    <meta property=’og:image’ content='https://mannix-kwan.herokuapp.com/assets/ProfilePicture.jpg'/>
+    <meta property=’og:image’ content='https://mannix-kwan.herokuapp.com/assets/ProfilePicture.png'/>
     <meta property=’og:description’ content='Hey! Check out more about Mannix Kwan - a technology enthusiast specialized in digital transformation'/>
     <meta property=’og:url’ content='https://mannix-kwan.herokuapp.com/'/>
     <meta property='og:image:width' content='390' />
